<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sunco_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/sunco_demo_intro"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_manage_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/manage_user"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/button_show"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_conversations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/show_conversations_list"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_start_conversation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/start_conversation"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_update_conversation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/update_conversation"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/Smooch_accentDark"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/button_custom_conversation_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/intercept_conversation"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
