<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText"
    android:background="#eeeeee">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:title="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_intro"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/sunco_demo_integration_id"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText_integration_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:hint="Integration Id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/Smooch_accentDark"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:text="Re-initialize Smooch"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>
